--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-tabs": "^1.1.9",
     "@tailwindcss/vite": "^4.1.5",
     "@tanstack/react-table": "^8.21.3",
+    "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
