--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "recharts": "^2.15.3",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.5",
     "zustand": "^5.0.4"
